@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

title US024 - Postpone an entry in the agenda

class PostponeEntryUI {
}

class PostponeEntryController {
    + postponeEntryController(taskRepository, greenSpaceRepository)
    + List<GreenSpaceDTO> getGreenSpaces()
    + List<GSTaskDTO> getTasksByGreenSpace(greenSpace)
    + postponeEntry(taskDTO, newDate)

}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository()
    + getTaskRepository()
}

class Agenda {
    + getTasksByGreenSpace(greenSpace)
    + toDTO(tasks)
    + postponeEntry(task, newDate)
}

class GreenSpaceRepository {
    + List<GreenSpace> getGreenSpaces()
    + toDTO(greenSpaces)

}

class GreenSpaceMapper {
    + List<GreenSpaceDTO> toDTO(List<GreenSpace> greenSpaces)
    + GreenSpaceDTO toDTO(GreenSpace greenSpace)
}

class GSTaskMapper {
    + List<GSTaskDTO> toDTO(List<Task> tasks)
    + GSTaskDTO toDTO(Task task)
}

class GreenSpaceDTO {
    name
    area
    type
    address
}

class GSTaskDTO {
    title
    description
    degreeOfUrgency
    expectedDuration
    status
    startingDate
}

class GSTask {
    title
    description
    degreeOfUrgency
    expectedDuration
    status
    startingDate
}

class GreenSpace {
    name
    area
    type
    address
}

PostponeEntryUI ..> PostponeEntryController
PostponeEntryController ...> Repositories: repositories
PostponeEntryController ..> Agenda: taskRepository
PostponeEntryController ..> GreenSpaceRepository: greenSpaceRepository

Repositories -> Repositories : instance
Repositories ---> "1" Agenda: taskRepository
Repositories ---> "1" GreenSpaceRepository: greenSpaceRepository

Agenda --> GSTask: tasks
GreenSpaceRepository --> GreenSpace: green spaces

Agenda ..> GSTaskMapper
GSTaskMapper ..> GSTaskDTO
GSTaskMapper ..> GSTask
GreenSpaceRepository ..> GreenSpaceMapper
GreenSpaceMapper ..> GreenSpaceDTO
GreenSpaceMapper ..> GreenSpace

@enduml